# delayed-liquidity-pressure-strategy

./: .gitignore.txt
core-engine/: CMakeLists.txt  main.cpp
core-engine/com.krd/src/: main.cpp
core-engine/com.krd/src/config/: Config.h
core-engine/com.krd/src/domain/: TradeResult.h
core-engine/com.krd/src/execution/: ExecutionQualityFilter.cpp  PaperTradeEngine.cpp  PaperTradeEngine.h  TestRunPaths.cpp  TestRunPaths.h  TradeStatsCollector.cpp  TradeStatsCollector.h
core-engine/com.krd/src/flow/: AggressionTracker.cpp
core-engine/com.krd/src/regime/: RegimeFilter.h
core-engine/com.krd/src/strategy/archive/alignment_continuation/: AlignmentContinuationStrategy.cpp
core-engine/com.krd/src/strategy/archive/break_hold_continuation/: BreakHoldContinuationStrategy.h
core-engine/com.krd/src/strategy/archive/conflict_resolution/: ConflictResolutionStrategy.h
core-engine/com.krd/src/strategy/archive/expansion_follow_through/: ExpansionFollowThroughStrategy.h
core-engine/com.krd/src/strategy/breakout_confirmation/: BreakoutConfirmationStrategy.cpp  BreakoutConfirmationStrategy.h
core-engine/com.krd/src/strategy/regime_hold_continuation/: RegimeHoldContinuationStrategy.cpp
core-engine/com.krd/src/strategy/signal_engine/: SignalEngineLite.cpp
core-engine/config/: Config.cpp  Config.h
core-engine/domain/: FlowSnapshot.cpp  FlowSnapshot.h  MarketSnapshot.cpp  MarketSnapshot.h  Position.cpp  RegimeSnapshot.cpp  RegimeSnapshot.h  SignalCandidate.h  SignalResult.cpp  SignalResult.h  TradeResult.cpp  TradeTick.h
core-engine/execution/: PaperTradeEngine.cpp  PaperTradeEngine.h
core-engine/messaging/: TradePublisher.h
core-engine/persistence/: SignalPersistenceFilter.cpp  SignalPersistenceFilter.h
core-engine/regime/: RegimeFilter.cpp  RegimeFilter.h
core-engine/src/: main.cpp
core-engine/src/config/: Config.h
core-engine/src/domain/: Position.h  SignalCandidate.cpp  TradeTick.cpp
core-engine/src/execution/: ExecutionQualityFilter.cpp  ExecutionQualityFilter.h  PaperTradeEngine.cpp  PaperTradeEngine.h  TestSummaryWriter.cpp  TestSummaryWriter.h  TradeCsvWriter.cpp  TradeCsvWriter.h
core-engine/src/flow/: AggressionTracker.h
core-engine/src/messaging/: TradePublisher.cpp
core-engine/src/strategy/archive/break_hold_continuation/: BreakHoldContinuationStrategy.cpp
core-engine/src/strategy/archive/conflict_resolution/: ConflictState.h
core-engine/src/strategy/archive/expansion_follow_through/: ExpansionFollowThroughStrategy.cpp
core-engine/src/strategy/archive/low_frequency_regime_continuation/: LowFrequencyRegimeContinuationStrategy.cpp  LowFrequencyRegimeContinuationStrategy.h
core-engine/src/strategy/breakout_confirmation/: BreakoutConfirmationStrategy.cpp
core-engine/src/strategy/common/: ISignalStrategy.cpp  StrategyContext.h
core-engine/src/strategy/flow_price_delay/: FlowPriceDelayStrategy.cpp
core-engine/src/strategy/intraday_trend_continuation/: IntradayTrendContinuationStrategy.cpp  IntradayTrendContinuationStrategy.h
core-engine/src/strategy/pressure_expansion/: PressureExpansionStrategy.h
core-engine/src/strategy/regime_hold_continuation/: RegimeHoldContinuationStrategy.h
core-engine/src/strategy/signal_engine/: SignalEngineLite.cpp  SignalEngineLite.h
core-engine/strategy/: SignalEngineLite.cpp  SignalEngineLite.h
core-engine/strategy/alignment_continuation/: AlignmentContinuationStrategy.h
core-engine/strategy/common/: ISignalStrategy.h  StrategyContext.cpp  StrategyContext.h
core-engine/strategy/compression_breakout/: CompressionBreakoutStrategy.cpp  CompressionBreakoutStrategy.h
core-engine/strategy/conflict_resolution/: ConflictResolutionStrategy.cpp  ConflictState.cpp
core-engine/strategy/pressure_expansion/: PressureExpansionStrategy.cpp
core-engine/test_runs/2026-04-20_21-35-15_1min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-20_21-46-17_180min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-21_01-02-54_10min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-21_02-22-31_15min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-21_07-11-32_20min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-21_07-45-38_20min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-21_08-19-57_20min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-21_09-03-27_20min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-21_09-25-00_20min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-21_11-13-25_20min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-21_11-36-58_60min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-22_19-51-18_20min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-22_20-20-37_20min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-23_00-18-14_30min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-23_01-00-35_30min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-23_05-17-30_20min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-23_05-59-03_20min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-23_06-22-21_60min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-23_07-27-50_180min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-23_14-44-32_20min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-23_15-17-07_20min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-23_16-17-19_20min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-23_23-03-03_30min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-24_17-52-44_30min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-24_18-50-17_60min/: test_summary.csv  trade_results.csv
core-engine/test_runs/2026-04-24_22-07-22_180min/: test_summary.csv  trade_results.csv
(+10 files in other folders)
